--- a/GameServerLibTests/GameServerLibTests.csproj
+++ b/GameServerLibTests/GameServerLibTests.csproj
@@ -40,6 +40,10 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ENetCS, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ENetSharpLeague.1.1.0\lib\net461\ENetCS.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\Microsoft.VisualStudio.QualityTools.UnitTestFramework.dll</HintPath>
@@ -58,6 +62,7 @@
     <Compile Include="Tests\Items\TestInventoryManager.cs" />
     <Compile Include="Tests\Logic\API\ApiFunctionManagerTests.cs" />
     <Compile Include="Tests\Logic\Chatbox\ChatboxManagerTests.cs" />
+    <Compile Include="Tests\Logic\Chatbox\TestCommand.cs" />
     <Compile Include="Tests\Logic\TestGameplayElements.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\Blowfish\TestBlowfish.cs" />
@@ -76,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
